# MORNIS

./: .gitignore  Cargo.toml  README.md  app.config.js  app.json  lat_to_place.py  main.py  package-lock.json  package.json  pyproject.toml  rob_attempt2.py  script.py  serve.py  tsconfig.json
app/: _layout.tsx  index.tsx  login.tsx
app/(tabs)/: index.tsx
app/drivers/: dashboard.tsx
app/people/: dashboard.tsx
components/: PlacesInput.tsx
dashboard/: README.md  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.css  App.tsx
lib/: supabase.ts
model/: pyproject.toml
public/: index.html
scripts/: path.py  pyvenv.cfg
src/: App.css  App.tsx  config.rs  main.rs  types.rs  vlm.rs  webserver.rs
src/components/: AlertsComponent.tsx  ExampleComponent.tsx
src/types/: index.ts
