[package]
name = "mornis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
axum = "0.8.4"
tower-http = "0.6.6"
image = "0.25.8"
postgres = "0.19.10"
