[package]
name = "mornis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"] }
image = "0.25.8"
postgres = "0.19.10"
tower = "0.5.2"
axum-macros = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
